<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginregisteration.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/llheader"
        android:padding="15dp"
        android:background="@drawable/background_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:background="@android:color/transparent"
            android:id="@+id/go_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/reset_password"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_info_sent"
        android:layout_below="@+id/llheader"
        android:layout_margin="15dp"/>

    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_below="@+id/textView"
        android:background="@android:color/transparent"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_marginStart="12dp"
            app:cardCornerRadius="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/cardview_contrycode"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_code_tv"/>

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="5dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_toRightOf="@+id/cardview_contrycode"
            app:cardElevation="5dp"
            >
            <LinearLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenum"/>
                <EditText
                    android:inputType="number"
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/phonenum"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:layout_below="@id/phone_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>
</RelativeLayout>